realtime database에서 데이터 파싱

--- a/Firebase101/Base.lproj/Main.storyboard
+++ b/Firebase101/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,12 +13,18 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Firebase101" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCK-cp-n5E">
-                                <rect key="frame" x="207" y="448" width="0.0" height="0.0"/>
+                                <rect key="frame" x="195" y="94" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsR-DB-2ok">
+                                <rect key="frame" x="195" y="144" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -26,17 +32,20 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dCK-cp-n5E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6Jr-pz-Enw"/>
-                            <constraint firstItem="dCK-cp-n5E" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9ov-Hm-M4q"/>
+                            <constraint firstItem="dCK-cp-n5E" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="5j1-Wm-7xu"/>
+                            <constraint firstItem="dCK-cp-n5E" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6Jr-pz-Enw"/>
+                            <constraint firstItem="LsR-DB-2ok" firstAttribute="top" secondItem="dCK-cp-n5E" secondAttribute="bottom" constant="50" id="7tC-9k-HzW"/>
+                            <constraint firstItem="LsR-DB-2ok" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pjy-Hw-Rfw"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="dataLabel" destination="dCK-cp-n5E" id="JrH-Fb-daC"/>
+                        <outlet property="numberOfCustomers" destination="LsR-DB-2ok" id="o7k-Bo-f0X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="28"/>
+            <point key="canvasLocation" x="115.38461538461539" y="27.72511848341232"/>
         </scene>
     </scenes>
     <resources>
